// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadMarkerGenes action Doesnt dispatch MARKER_GENES_LOADED if theres a different ETag stored 1`] = `
[
  {
    "ETag": "new-etag",
  },
]
`;

exports[`loadMarkerGenes action dispatches appropriately on error 1`] = `
[
  {
    "ETag": "new-etag",
  },
  {
    "error": "We couldn't get the marker genes",
  },
]
`;

exports[`loadMarkerGenes action dispatches appropriately on success 1`] = `
[
  {
    "ETag": "new-etag",
  },
  {
    "data": {
      "cellOrder": [
        0,
      ],
      "orderedGeneNames": [
        "geneA",
      ],
      "rawExpression": {
        "datatype": undefined,
        "index": [],
        "mathjs": "SparseMatrix",
        "ptr": [
          0,
          0,
        ],
        "size": [
          1,
          1,
        ],
        "values": [],
      },
      "stats": {
        "rawMean": [
          1,
        ],
        "rawStdev": [
          0,
        ],
        "truncatedMax": [
          1,
        ],
        "truncatedMin": [
          1,
        ],
      },
      "truncatedExpression": {
        "datatype": undefined,
        "index": [],
        "mathjs": "SparseMatrix",
        "ptr": [
          0,
          0,
        ],
        "size": [
          1,
          1,
        ],
        "values": [],
      },
      "zScore": {
        "datatype": undefined,
        "index": [],
        "mathjs": "SparseMatrix",
        "ptr": [
          0,
          0,
        ],
        "size": [
          1,
          1,
        ],
        "values": [],
      },
    },
    "plotUuid": "interactiveHeatmap",
  },
]
`;
